src/objects/Glxy_LeaseLocation__c.object
<CustomObject>
    <description>This table contains the Building information for each lease.  One lease can have multiple buildings assocated with it.</description>
    <fields>
        <fullName>Address_lkp__c</fullName>
        <formula>BuildingNumber__r.Street_Address__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuildingNumber__c</fullName>
        <label>Building Number</label>
        <referenceTo>PBS_Building__c</referenceTo>
        <relationshipLabel>LeaseLocations</relationshipLabel>
        <relationshipName>LeaseLocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Building_Name_lkp__c</fullName>
        <formula>BuildingNumber__r.Building_Name__c</formula>
        <label>Building Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Number_lkp__c</fullName>
        <formula>BuildingNumber__r.Bld_Building_Uk1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Number lkp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_lkp__c</fullName>
        <formula>BuildingNumber__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntraBudgetActivityAuthorization_lkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used for report,  to make connection between IBAA</description>
        <label>Intra Budget Activity Authorization</label>
        <referenceTo>Glxy_IntraBudgetActivityAuthorization__c</referenceTo>
        <relationshipName>LeaseLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <label>Lease Number</label>
        <referenceTo>Glxy_Lease__c</referenceTo>
        <relationshipName>LeaseLocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lease_Location_KeyVal__c</fullName>
        <description>Stores concatenation of Leasenum and building number for Validation rule</description>
        <label>Lease Location KeyVal</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <externalId>true</externalId>
        <label>Location Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <formula>BuildingNumber__r.Location_Code_Plus__c</formula>
        <label>Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_lkp__c</fullName>
        <formula>BuildingNumber__r.State_Code__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <label>Lease Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LeaseNumber__c</columns>
        <columns>Location_Code__c</columns>
        <columns>Building_Name_lkp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOC-{00000000}</displayFormat>
        <label>Lease Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>